app/component/quickSettingsPanel.scss
.quicksettings-container {
  display: block;
  background-color: $background-color-lighter;
  padding: $padding-small $padding-medium 1em $padding-medium;

  .bottom-row {
    margin-top: 0.3em;
    display: flex;
    flex: 0 1 auto;
    flex-direction: row;
    height: 2em;
    flex-wrap: wrap;
    justify-content: center;
    .toggle-modes {
      flex: 1 1 auto;
      .btn {
        background: #bbb;
        &.bus {
          background-color: $btn-bus-active-background-color;
          &:hover,
          &:active,
          &:focus {
            background-color: $btn-bus-active-background-color;
          }
        }
        &.tram {
          background-color: $btn-tram-active-background-color;
          &:hover,
          &:active,
          &:focus {
            background-color: $btn-tram-active-background-color;
          }
        }
        &.rail {
          background-color: $btn-rail-active-background-color;
          &:hover,
          &:active,
          &:focus {
            background-color: $btn-rail-active-background-color;
          }
        }
        &.subway {
          background-color: $btn-subway-active-background-color;
          &:hover,
          &:active,
          &:focus {
            background-color: $btn-subway-active-background-color;
          }
          .icon-holder > span > svg.icon {
            font-size: 1.4em;
            margin-top: -0.2em;
          }
        }
        &.ferry {
          background-color: $btn-ferry-active-background-color;
          &:hover,
          &:active,
          &:focus {
            background-color: $btn-ferry-active-background-color;
          }
        }
        &.airplane {
          background-color: $btn-air-active-background-color;
          &:hover,
          &:active,
          &:focus {
            background-color: $btn-air-active-background-color;
          }
        }
        &.citybike {
          background-color: $btn-citybike-active-background-color;
          &:hover,
          &:active,
          &:focus {
            background-color: $btn-citybike-active-background-color;
          }
        }
        &:focus {
          opacity: 0.9;
        }
      }
      .mode-icon {
        border-radius: 3px;
        border-right: none;
        margin-bottom: 0;
        height: 2em;
        max-width: 2em;
        .icon-holder {
          padding-bottom: 0.3em;
          padding-top: 0.3em;
          .icon {
            width: 1.4em;
            height: 1.4em;
          }
        }
      }
      .mode-icon ~ .mode-icon {
        margin-left: $padding-xsmall;
      }
    }
  }

  .select-wrapper {
    display: flex;
    flex-direction: row;
    color: $link-color;
    margin-left: 0.5em;
    width: 50%;
    > span {
      margin-left: -1.4rem;
      pointer-events: none;
    }
    .fake-select-arrow {
      font-size: 0.7rem;
      color: $primary-color;
      margin-top: 1em;
    }
  }

  select {
    vertical-align: middle;
    text-align: left;
    margin: 0;
    padding: 0 1rem 0 0.9em;
    font-family: $font-family;
    font-size: $font-size-xxsmall;
    display: inline-block;
    background-color: $white;
    color: $link-color;
    border-radius: 5px;
    border: solid 1px #ddd;
    appearance: none;
    font-weight: 700;
    height: 2.6em;

    &:hover {
      background-color: $white;
      border: solid 1px #007ac9;
    }
    &:focus {
      background-color: $white;
    }
    &.text-time-selector,
    &.desktop {
      padding: 0 0.5em 0 0.5em;
      margin: 0 -0.5em 0 0;
      text-align: center;
    }
    &.arrive,
    &.select-route-modes {
      width: 100%;
    }
  }
}
.mobile .quicksettings-container {
  padding-bottom: $padding-medium;
  padding-left: $padding-small;
  padding-right: $padding-small;

  .bottom-row .select-wrapper {
    width: 40%;
  }
}

.right-offcanvas-toggle {
  span {
    color: $link-color;
    @include font-bold;
    font-size: 0.8rem;
    margin-left: $padding-xsmall;
    text-align: center;
  }
  width: auto;
  margin: 0;
  color: $link-color;
  display: flex;
  align-items: center;
  min-height: 30px;

  > div {
    padding: $padding-small;
    height: 100%;
    > div {
      display: flex;
    }
  }

  .icon-holder {
    display: inline;
    position: relative;
    line-height: 0;

    .icon {
      font-size: $font-size-large;
    }

    .super-icon {
      fill: $hilight-color;
      position: absolute;
      right: 0;
      top: -2px;
      font-size: $font-size-xxsmall;
    }
  }
}

